@@ -1,3 +1,10 @@
+TAG: qcreports_db-6-0-?-?
+DATE: ?
+STAFF: lec
+TR13349/Genome Build 39 project
+obsolete reports:
+WF_AP_Routed.py
+
 TAG: qcreports_db-6-0-16-10
 DATE: 09/23/2020
 STAFF: lec
